src/components/shared/PopupMessage.scss
.popup-container{
  position: fixed;
  top: 50%;
  left: 50%;
  z-index: 13;
  transform: translate(-50%, -50%);
  background: #1D242C;
  border-radius: 14px;
  padding: 28px 23px;

  .text {
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 111.4%;
    /* or 27px */

    text-align: center;

    color: #FFFFFF;
  }
  .controls {
    margin-top: 40px;
  }

  .buttons-pair {
    .button {
      width: calc(50% - 7px);
      height: 44px;
    }
  }
}

.popup-message {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 12;
}

